@@ -101,6 +101,33 @@ get_netdev_tunnel_config(const struct netdev *netdev)
     return vport_tunnel_config(netdev_vport_cast(netdev));
 }
 
+static int
+get_tunnel_mtu(const struct netdev *netdev, int *mtup)
+{
+    struct netdev_vport *dev = netdev_vport_cast(netdev);
+
+    ovs_mutex_lock(&dev->mutex);
+    *mtup = dev->mtu;
+    ovs_mutex_unlock(&dev->mutex);
+
+    return 0;
+}
+
+static int
+set_tunnel_mtu(struct netdev *netdev, int mtu)
+{
+    struct netdev_vport *dev = netdev_vport_cast(netdev);
+
+    ovs_mutex_lock(&dev->mutex);
+    if (dev->mtu != mtu) {
+        dev->mtu = mtu;
+    }
+    ovs_mutex_unlock(&dev->mutex);
+    netdev_change_seq_changed(netdev);
+
+    return 0;
+}
+
 bool
 netdev_vport_is_patch(const struct netdev *netdev)
 {
@@ -1265,6 +1292,8 @@ netdev_vport_get_ifindex(const struct netdev *netdev_)
     .get_config = get_tunnel_config,                \
     .set_config = set_tunnel_config,                \
     .get_tunnel_config = get_netdev_tunnel_config,  \
+    .get_mtu = get_tunnel_mtu,                      \
+    .set_mtu = set_tunnel_mtu,                      \
     .get_status = tunnel_get_status
 
 void
