@@ -1667,6 +1667,17 @@ void compose_arp(struct dp_packet *, uint16_t arp_op,
                  const struct eth_addr arp_sha,
                  const struct eth_addr arp_tha, bool broadcast,
                  ovs_be32 arp_spa, ovs_be32 arp_tpa);
+struct dp_packet *compose_ipv6_ptb(const struct eth_addr eth_src,
+                                   const struct eth_addr eth_dst,
+                                   const struct in6_addr *ipv6_src,
+                                   const struct in6_addr *ipv6_dst,
+                                   ovs_be32 mtu, const void *body,
+                                   size_t body_len);
+struct dp_packet *compose_ipv4_fn(const struct eth_addr eth_src,
+                                   const struct eth_addr eth_dst,
+                                   ovs_be32 ip_src, ovs_be32 ip_dst,
+                                   ovs_be16 mtu, const void *body,
+                                   size_t body_len);
 void compose_nd_ns(struct dp_packet *, const struct eth_addr eth_src,
                    const struct in6_addr *ipv6_src,
                    const struct in6_addr *ipv6_dst);
